#717: DiffViewer Styling and UI Issues Issue 6: Add proper line-breaks for Labels in "Show Details". As a positive side effect, line breaks in the other Meta Data boxes now also work better. Note: "display: table" in for ".sc-tree li" is needed because otherwise there would be no line breaks between the different list items.

--- a/scenarioo-client/app/styles/scenarioo.less
+++ b/scenarioo-client/app/styles/scenarioo.less
@@ -474,6 +474,7 @@ label {
   margin: 2px 0 6px 0;
   padding-left: 4px;
   list-style-type: none;
+  display: table;
 }
 
 #relatedSketches li {
@@ -533,7 +534,7 @@ label {
   padding-bottom: 0.2em;
 }
 
-td > .sc-label {
+.sc-label {
   margin-top: 3px;
   margin-bottom: 3px;
   float: left;
